--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
         <title>Mi Pagina</title>
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style> </style>
     </head>
     <body> 
         Hola Mundo
+        <h1>Titulo1</h1>
+        <h2>Titulo1</h2>
+        <h3>Titulo1</h3>
+        <h4>Titulo1</h4>
+        <p>Hola Que tal<br>bien</p>
     </body>
 </html>
