--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style> </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body> 
-        Hola Mundo
-        <h1>Titulo1</h1>
-        <h2>Titulo1</h2>
-        <h3>Titulo1</h3>
-        <h4>Titulo1</h4>
-        <h5>Titulo1</h5>
-        <p>Hola Que tal<br>bien</p>
+        <div class="container"> 
+            <h1> Esto es un container 1.</h1>
+        </div>
+        <div class="container-fluid">
+            <h1> Esto es un container 2.</h1>
+        </div>
     </body>
 </html>
