--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body> 
-        <div class="container"> 
+        <div class="container bg-primary"> 
             <h1> Esto es un container 1.</h1>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid bs-secondary">
             <h1> Esto es un container 2.</h1>
         </div>
     </body>
