--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container bg-primary"> 
             <h1> Esto es un container 1.</h1>
         </div>
-        <div class="container-fluid bs-secondary">
+        <div class="container-fluid bg-secondary">
             <h1> Esto es un container 2.</h1>
         </div>
     </body>
