--- a/index.html
+++ b/index.html
@@ -15,5 +15,15 @@
         <div class="container-fluid bg-secondary">
             <h1> Esto es un container 2.</h1>
         </div>
+        <div class="container-fluid bg-secondary">
+            <div class="row">
+                <div class="col-12 bg-primary">HOLA</div>
+            </div>
+            <div class="row">
+                <div class="col-4 bg-warning">A</div>
+                <div class="col-4 bg-sucess">B</div>
+                <div class="col-4 bg-danger">C</div>
+            </div>
+        </div>
     </body>
 </html>
