Primer Boostrap GridSystem

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
         </div>
         <div class="container-fluid bg-secondary">
             <div class="row">
-                <div class="col-12 bg-primary">HOLA</div>
+                <div class="col-12 bg-primary" style="font-size:4vw">HOLA</div>
             </div>
             <div class="row">
-                <div class="col-4 bg-warning">A</div>
-                <div class="col-4 bg-sucess">B</div>
-                <div class="col-4 bg-danger">C</div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-warning" style="font-size:2vw; padding-left:0; margin-top:2vw">A</div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-success d-flex justify-content-center">B</div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-danger d-flex justify-content-end">C</div>
+                <div class="col-4 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-warning" style="font-size:2vw; padding: left 2vw;">D</div>
+                <div class="col-4 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-success">E</div>
+                <div class="col-4 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-danger">F</div>
+                <div class="col-4 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-danger">G</div>
             </div>
         </div>
     </body>
