--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html> 
-    <head> 
+<html>
+    <head>
         <title>Mi Pagina</title>
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
@@ -8,26 +8,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
-    <body> 
-        <div class="container bg-primary"> 
-            <h1> Esto es un container 1.</h1>
+
+    <body>
+        <div class="container bg-primary">Hola
+            <h1> HOLA </h1>
         </div>
-        <div class="container-fluid bg-secondary">
-            <h1> Esto es un container 2.</h1>
-        </div>
-        <div class="container-fluid bg-secondary">
-            <div class="row">
-                <div class="col-12 bg-primary" style="font-size:4vw">HOLA</div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-warning" style="font-size:2vw; padding-left:0; margin-top:2vw">A</div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-success d-flex justify-content-center">B</div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-danger d-flex justify-content-end">C</div>
-                <div class="col-4 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-warning" style="font-size:2vw; padding: left 2vw;">D</div>
-                <div class="col-4 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-success">E</div>
-                <div class="col-4 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-danger">F</div>
-                <div class="col-4 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 bg-danger">G</div>
-            </div>
-        </div>
+
     </body>
+
 </html>
