--- a/B12_notificaciones_automatica.html
+++ b/B12_notificaciones_automatica.html
@@ -8,6 +8,15 @@
 </head>
 <body class="bg-light">
 
+  <!-- Encabezado con botón de inicio -->
+  <header class="bg-white shadow-sm py-3 mb-4">
+    <div class="container d-flex justify-content-start align-items-center">
+      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
+        🏠 Inicio
+      </a>
+    </div>
+  </header>
+
   <div class="container my-5" style="max-width: 700px;">
     <h2>Notificaciones automáticas de estado</h2>
 
