--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     /* === Sección principal === */
     .hero {
-      background: url('https://images.unsplash.com/photo-1509057199576-632a47484ece?auto=format&fit=crop&w=1500&q=80') 
+      background: url('https://images.unsplash.com/photo-1612197596525-5d0e4b5d45e5?auto=format&fit=crop&w=1600&q=80')
                   no-repeat center center/cover;
       height: 100vh;
       display: flex;
@@ -138,13 +138,11 @@
     <h1>Viña Urbana</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="B04_catalogo.html">Catálogo</a></li>
-        <li><a href="B07_carro.html">Carrito</a></li>
-        <li><a href="B08_pago.html">Pago</a></li>
-        <li><a href="B09_boleta.html">Boleta</a></li>
-        <li><a href="B01_registro.html">Registro</a></li>
-        <li><a href="B02_login.html">Login</a></li>
+        <li><a href="B04_catalogo.html">📖 Catálogo</a></li>
+        <li><a href="B07_carro.html">🛒 Carrito</a></li>
+        <li><a href="B11_seguimiento.html">📦 Seguimiento de pedido</a></li>
+        <li><a href="B02_login.html">🔑 Login</a></li>
+        <li><a href="admin.html">🔒 Modo Administrador</a></li> <!-- Emoji de candado -->
       </ul>
     </nav>
   </header>
@@ -169,4 +167,4 @@
   </footer>
 
 </body>
-</html
+</html>
