--- a/B02_login.html
+++ b/B02_login.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>B02: Inicio de sesión</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
-  <div class="container my-5" style="max-width: 400px;">
+  <!-- Encabezado con logo/botón -->
+  <header class="bg-white shadow-sm py-3 mb-4">
+    <div class="container d-flex justify-content-center">
+      <!-- Aquí pondre poner una imagen cuando tenga logo -->
+      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
+        ← Volver a inicio
+      </a>
+    </div>
+  </header>
+
+  <div class="container my-5" style="max-width: 420px;">
     <h2 class="mb-4 text-center">Inicio de sesión</h2>
-    
-    <form class="border p-4 bg-white rounded shadow-sm">
+
+    <form id="loginForm" class="border p-4 bg-white rounded shadow-sm" onsubmit="event.preventDefault();">
       <div class="mb-3">
         <label for="loginEmail" class="form-label">Correo electrónico</label>
-        <input type="email" id="loginEmail" class="form-control" placeholder="cliente@vinaurbana.cl">
+        <input type="email" id="loginEmail" class="form-control" placeholder="cliente@vinaurbana.cl" required>
       </div>
+
       <div class="mb-3">
         <label for="loginPass" class="form-label">Contraseña</label>
-        <input type="password" id="loginPass" class="form-control">
+        <input type="password" id="loginPass" class="form-control" required>
       </div>
-      <button type="submit" class="btn btn-primary w-100 mb-3">Iniciar Sesión</button>
 
-      <!-- Botones de registro y recuperación -->
-      <div class="d-flex justify-content-between">
-        <a href="B01_registro.html" class="btn btn-outline-secondary btn-sm">Registrar usuario</a>
-        <a href="B03_recuperar.html" class="btn btn-link btn-sm">¿Olvidaste tu contraseña?</a>
+      <button type="button" id="btnLogin" class="btn btn-primary w-100 mb-3">Iniciar Sesión</button>
+
+      <div class="d-flex gap-2">
+        <a href="B01_registro.html" class="btn btn-outline-secondary flex-grow-1">Registrar usuario</a>
+        <a href="B03_recuperar.html" class="btn btn-link flex-grow-1">¿Olvidaste tu contraseña?</a>
       </div>
     </form>
   </div>
 
+  <script>
+    document.getElementById('btnLogin').addEventListener('click', function() {
+      const email = document.getElementById('loginEmail').value.trim();
+      const pass = document.getElementById('loginPass').value;
+
+      const usuarioValido = "cliente@vinaurbana.cl";
+      const contrasenaValida = "1234";
+
+      if (email === usuarioValido && pass === contrasenaValida) {
+        alert("✅ Inicio de sesión exitoso. Bienvenido/a a Viña Urbana.");
+      } else {
+        alert("❌ Usuario o contraseña incorrectos. Inténtalo nuevamente.");
+      }
+    });
+  </script>
 </body>
 </html>
