--- a/B04_catalogo.html
+++ b/B04_catalogo.html
@@ -3,27 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B-04 Catálogo de vinos</title>
+  <title>B04: Catálogo de vinos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
+  <!-- Encabezado con botones: Inicio, Filtrar, Carrito -->
+  <header class="bg-white shadow-sm py-3 mb-4">
+    <div class="container d-flex justify-content-between align-items-center">
+      <a href="index.html" class="btn btn-outline-primary fw-bold px-3">
+        ← Volver a inicio
+      </a>
+      <a href="B05_filtrar.html" class="btn btn-outline-info fw-bold px-3">
+        🔍 Filtrar productos
+      </a>
+      <a href="B07_carro.html" class="btn btn-outline-success fw-bold px-3">
+        🛒 Ver carrito
+      </a>
+    </div>
+  </header>
+
   <div class="container my-5">
-    <h2>Visualizar catálogo de vinos</h2>
-    <div class="row g-4">
-      <div class="col-md-3">
-        <div class="card">
+    <h2 class="mb-4 text-center">Catálogo de vinos</h2>
+
+    <div class="row g-4 justify-content-center">
+      <!-- Tarjeta de vino -->
+      <div class="col-md-3 col-sm-6">
+        <div class="card h-100 shadow-sm">
           <img src="img/vino1.jpg" class="card-img-top" alt="Vino 1">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h5 class="card-title">Cabernet Sauvignon</h5>
             <p class="card-text">$10.990</p>
+            <div class="d-flex flex-column gap-2">
+              <button class="btn btn-sm btn-primary">Agregar al carrito</button>
+              <a href="B06_detalle.html" class="btn btn-sm btn-outline-secondary">Ver producto</a>
+            </div>
           </div>
         </div>
       </div>
-      <!-- Repite para más vinos -->
+      <!-- Duplicar este bloque para más vinos -->
     </div>
+
     <!-- Paginación -->
-    <nav class="mt-4">
+    <nav class="mt-5">
       <ul class="pagination justify-content-center">
         <li class="page-item"><a class="page-link" href="#">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
@@ -34,3 +56,5 @@
 
 </body>
 </html>
+
+
