--- a/B05_filtrar.html
+++ b/B05_filtrar.html
@@ -3,13 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B-05 Filtrar vinos</title>
+  <title>B05: Filtrar vinos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
+  <!-- Encabezado con botón de inicio -->
+  <header class="bg-white shadow-sm py-3 mb-4">
+    <div class="container d-flex justify-content-start">
+      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
+        ← Volver a inicio
+      </a>
+    </div>
+  </header>
+
   <div class="container my-5">
     <h2>Filtrar vinos</h2>
+
     <!-- Barra de filtros -->
     <form class="row g-3 mb-4">
       <div class="col-md-4">
@@ -37,9 +47,11 @@
         <button type="reset" class="btn btn-secondary">Limpiar</button>
       </div>
     </form>
+
     <!-- Resultados -->
     <div class="alert alert-info">Resultados del filtro aparecerán aquí</div>
   </div>
 
 </body>
 </html>
+
