--- a/B06_detalle.html
+++ b/B06_detalle.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B-06 Detalle de vino</title>
+  <title>B06: Detalle de vino</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+
+  <!-- Encabezado con botones: Inicio y Carrito -->
+  <header class="bg-white shadow-sm py-3 mb-4">
+    <div class="container d-flex justify-content-between align-items-center">
+      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
+        ← Volver a inicio
+      </a>
+      <a href="B07_carro.html" class="btn btn-outline-success fw-bold px-4">
+        🛒 Ver carrito
+      </a>
+    </div>
+  </header>
 
   <div class="container my-5">
     <h2>Ver detalle de un vino</h2>
