--- a/B07_carro.html
+++ b/B07_carro.html
@@ -3,13 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B-07 Gestionar productos en el carro</title>
+  <title>B07: Gestionar productos en el carro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
+  <!-- Encabezado con botón de inicio -->
+  <header class="bg-white shadow-sm py-3 mb-4">
+    <div class="container d-flex justify-content-start">
+      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
+        ← Volver a inicio
+      </a>
+    </div>
+  </header>
+
   <div class="container my-5">
-    <h2>Gestionar productos en el carro</h2>
+    <h2 class="mb-4">Gestionar productos en el carro</h2>
 
     <!-- Tabla del carrito -->
     <table class="table table-bordered">
@@ -44,10 +53,10 @@
       </tbody>
     </table>
 
-    <!-- Total -->
-    <div class="text-end">
+    <!-- Total y botón de pago -->
+    <div class="text-end mb-4">
       <p><strong>Total: $28.970</strong></p>
-      <button class="btn btn-success">Proceder al pago</button>
+      <a href="B08_pago.html" class="btn btn-success">Proceder al pago</a>
     </div>
 
     <!-- Botón simulado de "Agregar al carro" -->
