--- a/B09_boleta.html
+++ b/B09_boleta.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B-09 Recibir boleta digital</title>
+  <title>B09: Recibir boleta digital</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+
+  <!-- Encabezado con dos botones -->
+  <header class="bg-white shadow-sm py-3 mb-4">
+    <div class="container d-flex justify-content-between align-items-center">
+      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
+        🏠 Inicio
+      </a>
+      <a href="index.html" class="btn btn-outline-secondary fw-bold px-4">
+        ← Volver al inicio
+      </a>
+    </div>
+  </header>
 
   <div class="container my-5" style="max-width: 700px;">
     <h2>Recibir boleta digital</h2>
@@ -25,9 +37,14 @@
     </div>
 
     <!-- Caso alternativo: error de envío -->
-    <div class="alert alert-warning">
+    <div class="alert alert-warning mb-4">
       No pudimos entregar la boleta a tu correo.  
       <a href="#" class="btn btn-outline-primary btn-sm">Descargar boleta en PDF</a>
+    </div>
+
+    <!-- Botón Continuar -->
+    <div class="text-center">
+      <a href="B10_confirmar_pedido.html" class="btn btn-success btn-lg">Continuar</a>
     </div>
   </div>
 
