--- a/B10_confirmar_pedido.html
+++ b/B10_confirmar_pedido.html
@@ -20,10 +20,17 @@
     </div>
 
     <!-- Caso alternativo: error -->
-    <div class="alert alert-danger">
+    <div class="alert alert-danger mb-4">
       Ocurrió un error al asignar tu pedido al despacho.  
       El pedido ha quedado en <strong>revisión manual</strong>.  
       Nuestro equipo lo revisará y te notificará a la brevedad.
+    </div>
+
+    <!-- Botón Activar notificaciones automáticas -->
+    <div class="text-center">
+      <a href="B12_notificaciones_automatica.html" class="btn btn-primary btn-lg">
+        🔔 Activar notificaciones automáticas
+      </a>
     </div>
   </div>
 
