--- a/B04_catalogo.html
+++ b/B04_catalogo.html
@@ -3,45 +3,159 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B04: Catálogo de vinos</title>
+  <title>B04 – Catálogo de Vinos | Viña Urbana</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
 
-  <!-- Encabezado con botones: Inicio, Filtrar, Carrito -->
-  <header class="bg-white shadow-sm py-3 mb-4">
-    <div class="container d-flex justify-content-between align-items-center">
-      <a href="index.html" class="btn btn-outline-primary fw-bold px-3">
-        ← Volver a inicio
-      </a>
-      <a href="B05_filtrar.html" class="btn btn-outline-info fw-bold px-3">
-        🔍 Filtrar productos
-      </a>
-      <a href="B07_carro.html" class="btn btn-outline-success fw-bold px-3">
-        🛒 Ver carrito
-      </a>
+  <style>
+    body {
+      background: radial-gradient(circle at top, #1a1a1a 0%, #0b0b0b 100%);
+      color: #f2f2f2;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      min-height: 100vh;
+    }
+
+    header {
+      background-color: rgba(0, 0, 0, 0.85);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .logo {
+      height: 55px;
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.08);
+    }
+
+    .header-buttons {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .btn-header {
+      background-color: #b88a44;
+      color: #111;
+      font-weight: 600;
+      border-radius: 8px;
+      text-decoration: none;
+      padding: 8px 18px;
+      transition: all 0.3s;
+    }
+
+    .btn-header:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.05);
+    }
+
+    h2 {
+      color: #f8e4c9;
+      text-align: center;
+      margin-bottom: 40px;
+      text-shadow: 0 0 10px rgba(184, 138, 68, 0.4);
+    }
+
+    .card {
+      background: linear-gradient(160deg, #2a1a1a, #3d2323);
+      border: 1px solid rgba(184, 138, 68, 0.3);
+      border-radius: 12px;
+      box-shadow: 0 0 25px rgba(184, 138, 68, 0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 0 35px rgba(212, 168, 90, 0.25);
+    }
+
+    .card-title {
+      color: #d9b679;
+      font-weight: 600;
+    }
+
+    .card-text {
+      color: #f8f3ee;
+    }
+
+    .btn-primary {
+      background-color: #b88a44;
+      border: none;
+      color: #111;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn-primary:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.03);
+    }
+
+    .btn-outline-secondary {
+      border-color: #b88a44;
+      color: #d9b679;
+      font-weight: 600;
+    }
+
+    .btn-outline-secondary:hover {
+      background-color: #b88a44;
+      color: #111;
+      transform: scale(1.03);
+    }
+
+    footer {
+      background-color: #000;
+      color: #ccc;
+      text-align: center;
+      padding: 30px;
+      margin-top: 60px;
+      font-size: 0.9em;
+      border-top: 1px solid rgba(184, 138, 68, 0.3);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Encabezado -->
+  <header>
+    <a href="index.html">
+      <img src="img/logo_vinaurbana.png" alt="Logo Viña Urbana" class="logo">
+    </a>
+
+    <div class="header-buttons">
+      <a href="B05_filtrar.html" class="btn-header">🔍 Filtrar productos</a>
+      <a href="B07_carro.html" class="btn-header">🛒 Ver carrito</a>
     </div>
   </header>
 
+  <!-- Contenido principal -->
   <div class="container my-5">
-    <h2 class="mb-4 text-center">Catálogo de vinos</h2>
+    <h2>Catálogo de Vinos</h2>
 
     <div class="row g-4 justify-content-center">
       <!-- Tarjeta de vino -->
       <div class="col-md-3 col-sm-6">
-        <div class="card h-100 shadow-sm">
-          <img src="img/vino1.jpg" class="card-img-top" alt="Vino 1">
-          <div class="card-body text-center">
+        <div class="card h-100 text-center p-3">
+          <img src="img/vino1.jpg" class="card-img-top rounded mb-3" alt="Vino 1">
+          <div class="card-body">
             <h5 class="card-title">Cabernet Sauvignon</h5>
             <p class="card-text">$10.990</p>
             <div class="d-flex flex-column gap-2">
-              <button class="btn btn-sm btn-primary">Agregar al carrito</button>
-              <a href="B06_detalle.html" class="btn btn-sm btn-outline-secondary">Ver producto</a>
+              <button class="btn btn-primary btn-sm">Agregar al carrito</button>
+              <a href="B06_detalle.html" class="btn btn-outline-secondary btn-sm">Ver producto</a>
             </div>
           </div>
         </div>
       </div>
-      <!-- Duplicar este bloque para más vinos -->
+      <!-- Puedes duplicar este bloque para más vinos -->
     </div>
 
     <!-- Paginación -->
@@ -53,6 +167,10 @@
       </ul>
     </nav>
   </div>
+
+  <footer>
+    <p>&copy; 2025 Viña Urbana – Vinos Boutique | Todos los derechos reservados.</p>
+  </footer>
 
 </body>
 </html>
