--- a/B05_filtrar.html
+++ b/B05_filtrar.html
@@ -3,20 +3,123 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B05: Filtrar vinos</title>
+  <title>B05 – Filtrar vinos | Viña Urbana</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
 
-  <!-- Encabezado con botón de inicio -->
-  <header class="bg-white shadow-sm py-3 mb-4">
-    <div class="container d-flex justify-content-start">
-      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
-        ← Volver a inicio
-      </a>
-    </div>
+  <style>
+    body {
+      background: radial-gradient(circle at top, #1a1a1a 0%, #0b0b0b 100%);
+      color: #f8f3ee;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      min-height: 100vh;
+    }
+
+    header {
+      background-color: rgba(0, 0, 0, 0.85);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+      gap: 10px;
+    }
+
+    .logo {
+      height: 55px;
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.08);
+    }
+
+    .btn-header {
+      background-color: #b88a44;
+      color: #111;
+      font-weight: 600;
+      border-radius: 8px;
+      text-decoration: none;
+      padding: 8px 18px;
+      transition: all 0.3s;
+    }
+
+    .btn-header:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.05);
+    }
+
+    h2 {
+      color: #f8e4c9;
+      text-align: center;
+      margin-bottom: 40px;
+      text-shadow: 0 0 10px rgba(184, 138, 68, 0.4);
+    }
+
+    label {
+      color: #d9b679;
+      font-weight: 600;
+    }
+
+    .form-select, .form-control {
+      background-color: #2a1a1a;
+      color: #f8f3ee;
+      border: 1px solid rgba(184, 138, 68, 0.3);
+    }
+
+    .form-select:focus, .form-control:focus {
+      border-color: #d4a85a;
+      box-shadow: 0 0 8px rgba(184, 138, 68, 0.3);
+    }
+
+    .btn-primary {
+      background-color: #b88a44;
+      border: none;
+      color: #111;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn-primary:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.03);
+    }
+
+    .btn-secondary {
+      background-color: transparent;
+      color: #d9b679;
+      border: 1px solid #b88a44;
+    }
+
+    .btn-secondary:hover {
+      background-color: #b88a44;
+      color: #000;
+      transform: scale(1.03);
+    }
+
+    footer {
+      background-color: #000;
+      color: #ccc;
+      text-align: center;
+      padding: 30px;
+      margin-top: 60px;
+      font-size: 0.9em;
+      border-top: 1px solid rgba(184, 138, 68, 0.3);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Encabezado -->
+  <header>
+    <a href="index.html">
+      <img src="img/logo_vinaurbana.png" alt="Logo Viña Urbana" class="logo">
+    </a>
   </header>
 
+  <!-- Contenido -->
   <div class="container my-5">
     <h2>Filtrar vinos</h2>
 
@@ -49,8 +152,14 @@
     </form>
 
     <!-- Resultados -->
-    <div class="alert alert-info">Resultados del filtro aparecerán aquí</div>
+    <div class="alert alert-dark border-warning text-center" role="alert" style="background-color: rgba(0,0,0,0.4); color: #f8e4c9;">
+      Resultados del filtro aparecerán aquí.
+    </div>
   </div>
+
+  <footer>
+    <p>&copy; 2025 Viña Urbana – Vinos Boutique | Todos los derechos reservados.</p>
+  </footer>
 
 </body>
 </html>
