--- a/B06_detalle.html
+++ b/B06_detalle.html
@@ -3,42 +3,143 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B06: Detalle de vino</title>
+  <title>B06 – Detalle de vino | Viña Urbana</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+  <style>
+    body {
+      background: radial-gradient(circle at top, #1a1a1a 0%, #0b0b0b 100%);
+      color: #f8f3ee;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      min-height: 100vh;
+    }
 
-  <!-- Encabezado con botones: Inicio y Carrito -->
-  <header class="bg-white shadow-sm py-3 mb-4">
-    <div class="container d-flex justify-content-between align-items-center">
-      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
-        ← Volver a inicio
-      </a>
-      <a href="B07_carro.html" class="btn btn-outline-success fw-bold px-4">
-        🛒 Ver carrito
-      </a>
+    header {
+      background-color: rgba(0, 0, 0, 0.85);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+    }
+
+    .logo {
+      height: 55px;
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.08);
+    }
+
+    .btn-header {
+      background-color: #b88a44;
+      color: #111;
+      font-weight: 600;
+      border-radius: 8px;
+      text-decoration: none;
+      padding: 8px 18px;
+      transition: all 0.3s;
+    }
+
+    .btn-header:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.05);
+    }
+
+    h2 {
+      color: #f8e4c9;
+      text-align: center;
+      margin-bottom: 40px;
+      text-shadow: 0 0 10px rgba(184, 138, 68, 0.4);
+    }
+
+    .card {
+      background: linear-gradient(160deg, #2a1a1a, #3d2323);
+      color: #f2f2f2;
+      border: 1px solid rgba(184, 138, 68, 0.3);
+      border-radius: 15px;
+      box-shadow: 0 0 30px rgba(184, 138, 68, 0.15);
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 40px rgba(212, 168, 90, 0.25);
+    }
+
+    .card-title {
+      color: #d9b679;
+      font-weight: 700;
+      font-size: 1.5rem;
+    }
+
+    .btn-success {
+      background-color: #b88a44;
+      border: none;
+      color: #111;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn-success:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.03);
+    }
+
+    footer {
+      background-color: #000;
+      color: #ccc;
+      text-align: center;
+      padding: 30px;
+      margin-top: 60px;
+      font-size: 0.9em;
+      border-top: 1px solid rgba(184, 138, 68, 0.3);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Encabezado -->
+  <header>
+    <a href="index.html">
+      <img src="img/logo_vinaurbana.png" alt="Logo Viña Urbana" class="logo">
+    </a>
+    <div class="d-flex gap-2">
+      <a href="index.html" class="btn-header">← Volver a inicio</a>
+      <a href="B07_carro.html" class="btn-header">🛒 Ver carrito</a>
     </div>
   </header>
 
-  <div class="container my-5">
-    <h2>Ver detalle de un vino</h2>
+  <!-- Contenido principal -->
+  <div class="container my-5" style="max-width: 800px;">
+    <h2>Detalle de vino</h2>
+
     <div class="card">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img src="img/vino1.jpg" class="img-fluid rounded-start" alt="Vino">
+      <div class="row g-0 align-items-center">
+        <div class="col-md-5">
+          <img src="img/vino1.jpg" class="img-fluid rounded-start" alt="Vino Cabernet">
         </div>
-        <div class="col-md-8">
+        <div class="col-md-7">
           <div class="card-body">
             <h5 class="card-title">Cabernet Sauvignon 2021</h5>
-            <p class="card-text">Descripción: vino tinto intenso, cepa Cabernet Sauvignon, bodega Viña Urbana.</p>
+            <p class="card-text">Vino tinto intenso con notas a frutos rojos, cuerpo medio y un final elegante. Elaborado por <strong>Viña Urbana</strong>.</p>
             <p class="card-text"><strong>Precio:</strong> $10.990</p>
             <p class="card-text"><strong>Stock disponible:</strong> 15 unidades</p>
-            <button class="btn btn-success">Agregar al carrito</button>
+            <button class="btn btn-success w-100 mt-3">Agregar al carrito</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+  <footer>
+    <p>&copy; 2025 Viña Urbana – Vinos Boutique | Todos los derechos reservados.</p>
+  </footer>
+
 </body>
 </html>
+
