--- a/B07_carro.html
+++ b/B07_carro.html
@@ -3,67 +3,189 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B07: Gestionar productos en el carro</title>
+  <title>B07 – Carrito de compras | Viña Urbana</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+  <style>
+    body {
+      background: radial-gradient(circle at top, #1a1a1a 0%, #0b0b0b 100%);
+      color: #f8f3ee;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      min-height: 100vh;
+    }
 
-  <!-- Encabezado con botón de inicio -->
-  <header class="bg-white shadow-sm py-3 mb-4">
-    <div class="container d-flex justify-content-start">
-      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
-        ← Volver a inicio
-      </a>
-    </div>
+    header {
+      background-color: rgba(0, 0, 0, 0.85);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+    }
+
+    .logo {
+      height: 55px;
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.08);
+    }
+
+    .btn-header {
+      background-color: #b88a44;
+      color: #111;
+      font-weight: 600;
+      border-radius: 8px;
+      text-decoration: none;
+      padding: 8px 18px;
+      transition: all 0.3s;
+    }
+
+    .btn-header:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.05);
+    }
+
+    h2 {
+      color: #f8e4c9;
+      text-align: center;
+      margin-bottom: 40px;
+      text-shadow: 0 0 10px rgba(184, 138, 68, 0.4);
+    }
+
+    .cart-container {
+      background: linear-gradient(160deg, #2a1a1a, #3d2323);
+      color: #f2f2f2;
+      border: 1px solid rgba(184, 138, 68, 0.3);
+      border-radius: 15px;
+      padding: 30px;
+      box-shadow: 0 0 25px rgba(184, 138, 68, 0.15);
+      backdrop-filter: blur(3px);
+    }
+
+    table {
+      color: #f8f3ee;
+    }
+
+    thead {
+      background-color: #b88a44 !important;
+      color: #111;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    tbody tr {
+      background: rgba(255, 255, 255, 0.05);
+      border-bottom: 1px solid rgba(184, 138, 68, 0.2);
+    }
+
+    tbody tr:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    .btn-danger {
+      background-color: #7a1a1a;
+      border: none;
+    }
+
+    .btn-danger:hover {
+      background-color: #a82a2a;
+    }
+
+    .btn-success {
+      background-color: #b88a44;
+      border: none;
+      color: #111;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn-success:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.03);
+    }
+
+    .btn-primary {
+      background-color: #4b2e1f;
+      border: 1px solid #b88a44;
+    }
+
+    .btn-primary:hover {
+      background-color: #6b3f2c;
+      border-color: #d4a85a;
+    }
+
+    footer {
+      background-color: #000;
+      color: #ccc;
+      text-align: center;
+      padding: 30px;
+      margin-top: 60px;
+      font-size: 0.9em;
+      border-top: 1px solid rgba(184, 138, 68, 0.3);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Encabezado -->
+  <header>
+    <a href="index.html">
+      <img src="img/logo_vinaurbana.png" alt="Logo Viña Urbana" class="logo">
+    </a>
   </header>
 
+  <!-- Contenedor principal -->
   <div class="container my-5">
-    <h2 class="mb-4">Gestionar productos en el carro</h2>
+    <div class="cart-container">
+      <h2>Gestionar productos en el carrito</h2>
 
-    <!-- Tabla del carrito -->
-    <table class="table table-bordered">
-      <thead class="table-dark">
-        <tr>
-          <th>Producto</th>
-          <th>Cantidad</th>
-          <th>Precio</th>
-          <th>Subtotal</th>
-          <th>Acción</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Cabernet Sauvignon</td>
-          <td>1</td>
-          <td>$10.990</td>
-          <td>$10.990</td>
-          <td>
-            <button class="btn btn-danger btn-sm">Eliminar</button>
-          </td>
-        </tr>
-        <tr>
-          <td>Merlot Reserva</td>
-          <td>2</td>
-          <td>$8.990</td>
-          <td>$17.980</td>
-          <td>
-            <button class="btn btn-danger btn-sm">Eliminar</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+      <div class="table-responsive">
+        <table class="table align-middle text-center mb-4">
+          <thead>
+            <tr>
+              <th>Producto</th>
+              <th>Cantidad</th>
+              <th>Precio</th>
+              <th>Subtotal</th>
+              <th>Acción</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Cabernet Sauvignon</td>
+              <td>1</td>
+              <td>$10.990</td>
+              <td>$10.990</td>
+              <td><button class="btn btn-danger btn-sm">Eliminar</button></td>
+            </tr>
+            <tr>
+              <td>Merlot Reserva</td>
+              <td>2</td>
+              <td>$8.990</td>
+              <td>$17.980</td>
+              <td><button class="btn btn-danger btn-sm">Eliminar</button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-    <!-- Total y botón de pago -->
-    <div class="text-end mb-4">
-      <p><strong>Total: $28.970</strong></p>
-      <a href="B08_pago.html" class="btn btn-success">Proceder al pago</a>
-    </div>
+      <div class="text-end mt-4">
+        <p class="fs-5"><strong>Total: $28.970</strong></p>
+        <a href="B08_pago.html" class="btn btn-success">Proceder al pago</a>
+      </div>
 
-    <!-- Botón simulado de "Agregar al carro" -->
-    <div class="mt-4">
-      <button class="btn btn-primary">Agregar al carro (ejemplo)</button>
+      <div class="mt-5 text-center">
+        <button class="btn btn-primary">Agregar al carro (ejemplo)</button>
+      </div>
     </div>
   </div>
+
+  <footer>
+    <p>&copy; 2025 Viña Urbana – Vinos Boutique | Todos los derechos reservados.</p>
+  </footer>
 
 </body>
 </html>
