--- a/B11_seguimiento.html
+++ b/B11_seguimiento.html
@@ -3,46 +3,152 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B-11 Seguimiento de pedido</title>
+  <title>B-11 Seguimiento de pedido | Viña Urbana</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+  <style>
+    body {
+      background: radial-gradient(circle at top, #1a1a1a 0%, #0b0b0b 100%);
+      color: #f2f2f2;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      min-height: 100vh;
+    }
 
-  <!-- Encabezado con botón de inicio -->
-  <header class="bg-white shadow-sm py-3 mb-4">
-    <div class="container d-flex justify-content-start">
-      <a href="index.html" class="btn btn-outline-primary fw-bold px-4">
-        ← Volver al inicio
-      </a>
-    </div>
+    header {
+      background-color: rgba(0,0,0,0.85);
+      padding: 15px 30px;
+      display: flex;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+      margin-bottom: 40px;
+    }
+
+    .logo {
+      height: 55px;
+      transition: transform 0.3s ease;
+      margin-right: 20px;
+    }
+
+    h2 {
+      color: #f8e4c9;
+      text-align: center;
+      margin-bottom: 40px;
+      text-shadow: 0 0 10px rgba(184,138,68,0.4);
+    }
+
+    .form-container, .card-seguimiento {
+      background: linear-gradient(160deg, #2a1a1a, #3d2323);
+      border: 1px solid rgba(184,138,68,0.3);
+      border-radius: 15px;
+      padding: 25px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 20px rgba(184,138,68,0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .form-container:hover, .card-seguimiento:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 35px rgba(212,168,90,0.25);
+    }
+
+    label {
+      color: #d9b679;
+      font-weight: 500;
+    }
+
+    input.form-control {
+      background-color: #f8f3ee;
+      color: #111;
+      border-radius: 6px;
+      border: 1px solid #b88a44;
+      padding: 10px;
+    }
+
+    input.form-control:focus {
+      border-color: #d4a85a;
+      box-shadow: 0 0 8px rgba(212,168,90,0.6);
+    }
+
+    .btn-primary {
+      background-color: #b88a44;
+      border: none;
+      color: #111;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn-primary:hover {
+      background-color: #d4a85a;
+      color: #000;
+      transform: scale(1.03);
+    }
+
+    .badge-custom {
+      background-color: #b88a44;
+      color: #111;
+      font-weight: 600;
+    }
+
+    .badge-custom.entregado {
+      background-color: #d4a85a;
+      color: #111;
+    }
+
+    p, h5 {
+      color: #f2f2f2;
+    }
+
+    small {
+      color: #ccc;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Encabezado con logo -->
+  <header>
+    <a href="index.html">
+      <img src="img/logo_vinaurbana.png" alt="Logo Viña Urbana" class="logo">
+    </a>
   </header>
 
   <div class="container my-5" style="max-width: 700px;">
-    <h2 class="mb-4 text-center">Seguimiento de pedido</h2>
+    <h2>Seguimiento de pedido</h2>
 
-    <!-- Formulario para ingresar número de pedido -->
-    <form class="border p-4 bg-white rounded mb-4">
-      <div class="mb-3">
-        <label for="numPedido" class="form-label">Número de pedido</label>
-        <input type="text" id="numPedido" class="form-control" placeholder="Ej: #56789">
-      </div>
-      <button type="submit" class="btn btn-primary w-100">Consultar estado</button>
-    </form>
+    <!-- Formulario -->
+    <div class="form-container">
+      <form onsubmit="event.preventDefault(); consultarPedido();">
+        <div class="mb-3">
+          <label for="numPedido" class="form-label">Número de pedido</label>
+          <input type="text" id="numPedido" class="form-control" placeholder="Ej: #56789" required>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Consultar estado</button>
+      </form>
+    </div>
 
     <!-- Ejemplo de resultados -->
-    <div class="border p-3 bg-white rounded mb-3">
-      <h5>Estado actual: <span class="badge bg-info">En ruta hacia destino</span></h5>
+    <div class="card-seguimiento">
+      <h5>Estado actual: <span class="badge badge-custom">En ruta hacia destino</span></h5>
       <p><strong>Número de pedido:</strong> #56789</p>
       <p><strong>Última actualización:</strong> 12/10/2025 - 14:32 hrs</p>
     </div>
 
-    <!-- Otro ejemplo alternativo -->
-    <div class="border p-3 bg-white rounded">
-      <h5>Estado actual: <span class="badge bg-success">Entregado</span></h5>
+    <div class="card-seguimiento">
+      <h5>Estado actual: <span class="badge badge-custom entregado">Entregado</span></h5>
       <p><strong>Número de pedido:</strong> #12345</p>
       <p><strong>Fecha de entrega:</strong> 10/10/2025</p>
     </div>
   </div>
+
+  <script>
+    function consultarPedido() {
+      const pedido = document.getElementById('numPedido').value.trim();
+      if(pedido) {
+        alert(`🔍 Consultando el estado del pedido ${pedido}...`);
+      } else {
+        alert("⚠️ Ingresa un número de pedido válido.");
+      }
+    }
+  </script>
 
 </body>
 </html>
